--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.ico">
+  <meta name="description" content="Welcome to my website!">
+  <meta name="author" content="862429131">
 
-  <title>John Doe - Business Administration</title>
+  <title>Wayne Bai - Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/waynebai.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
         </li>
       </ul>
     </div>
-  </div>
+    </div>
   </nav>
 
   <div class="container-fluid p-0">
@@ -61,23 +61,27 @@
         <h1 class="mb-3">John Doe
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Wayne Bai is an ambitious and driven student currently pursuing a Bachelor’s degree in Computer Science at the University of California, Riverside. Growing up in a family where technology was a constant presence, Wayne developed an early fascination with how devices work and the endless possibilities of software. From an early age, he began experimenting with coding, eventually teaching himself various programming languages and creating small projects. His curiosity for innovation and problem-solving continued to grow, leading him to choose a major that would allow him to delve deeper into the world of technology. At UC Riverside, Wayne is particularly focused on artificial intelligence (AI) and machine learning, with the ultimate goal of harnessing these technologies to create solutions that have a positive social impact.
 
-        Enter bio here<br><br>
+<br><br>
 
-        Enter bio here
+          Beyond his coursework, Wayne is actively involved in numerous extracurricular activities that enhance his skills and provide real-world experience. He is the co-founder of the UC Riverside AI Club, where he collaborates with peers to work on machine learning projects, organize tech talks, and host hackathons. These events foster a collaborative environment where students can apply their knowledge to solve real-world problems. Wayne has also gained valuable hands-on experience through an internship with a tech startup, where he worked on developing software solutions for data analytics and process automation. This internship not only helped him refine his technical skills but also provided him with insight into the fast-paced world of tech startups. In addition, Wayne is an active member of the university’s competitive coding team, participating in regional programming competitions where he has helped secure top finishes for the team.<br><br>
+
+          Looking toward the future, Wayne is excited about the opportunities in the tech industry, especially in fields like AI, sustainability, and healthcare. After graduating from UC Riverside, he plans to pursue a career in AI development, focusing on creating innovative solutions that tackle global challenges such as climate change and healthcare inefficiencies. Wayne is particularly interested in using machine learning to optimize renewable energy systems and improve healthcare diagnostics, areas he believes have immense potential for positive societal impact. With a solid academic background, hands-on experience through internships, and a strong commitment to social change, Wayne is poised to make significant contributions to the tech industry and beyond.
+
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/ybai063">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.co/ybai063">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/waynebai">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="ybai063@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -93,11 +97,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://google.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Internship at TechX Innovations - Data Analytics and Machine Learning Intern<br>
+              • Volunteer Software Developer for EcoTech Solutions<br>
+              • Freelance Web Developer<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -125,12 +129,12 @@
             <h3 class="mb-0">Teaching Assistant</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+              • Ran sessions to help students learn how to code<br>
+              • Reviewed and graded student coding projects<br>
+              • Created educational content to help promote student education<br>
+              • TA'd for over 400 students each academic quarter<br>
 
-          </p>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2011 - January 2016</span>
@@ -152,18 +156,18 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Science Administration</div>
+            <div>Material Science and Engineering</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2023 - December 2027</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Material Science and Engineering</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
@@ -190,16 +194,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+          <center>
+            <img src="img/img1.jpg" width="500px">
+            <img src="img/img2.jpg" width="500px"><br>
+            <img src="img/img3.jpg" width="500px">
+            <img src="img/img4.jpg" width="500px"><br>
+          </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
-  document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+        document.write(new Date().getFullYear());
+      </script> John Doe</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -211,4 +218,5 @@
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
 </body>
+
 </html>
