--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Wayne Bai
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
+        <div class="subheading mb-5">Material Science and Engineering</div>
         <p class="lead mb-4">Wayne Bai is an ambitious and driven student currently pursuing a Bachelor’s degree in Computer Science at the University of California, Riverside. Growing up in a family where technology was a constant presence, Wayne developed an early fascination with how devices work and the endless possibilities of software. From an early age, he began experimenting with coding, eventually teaching himself various programming languages and creating small projects. His curiosity for innovation and problem-solving continued to grow, leading him to choose a major that would allow him to delve deeper into the world of technology. At UC Riverside, Wayne is particularly focused on artificial intelligence (AI) and machine learning, with the ultimate goal of harnessing these technologies to create solutions that have a positive social impact.
 
 <br><br>
